Release History
===============


1.2.1 (unreleased)
------------------

- Fix build failures with LANG=C (#13140).


1.2 (2013-11-08)
----------------

- New `Summary.empty` method is called if there are no results present (#11593).
- Improve range violation wording (#11597).
- Ensure that nagiosplugin install correctly with current setuptools (#12660).
- Behave and do not attach anything to the root logger.
- Add debugging topic guide. Explain how to disable the timeout when using pdb
  (#11592).


1.1 (2013-06-19)
----------------

- Identical to 1.1b1.


1.1b1 (2013-05-28)
------------------

- Made compatible with Python 2.6 (#12297).
- Tutorial #3: check_users (#11539).
- Minor documentation improvements.


1.0.0 (2013-02-05)
------------------

- LogTail returns lines as byte strings in Python 3 to avoid codec issues
  (#11564).
- LogTail gives a line-based iterator instead of a file object (#11564).
- Basic API docs for the most important classes (#11612).
- Made compatible with Python 2.7 (#11533).
- Made compatible with Python 3.3.


1.0.0b1 (2012-10-29)
--------------------

- Improve error reporting for missing contexts.
- Exit with code 3 if no metrics have been generated.
- Improve default Summary.verbose() to list all threshold violations.
- Move main source repository to https://bitbucket.org/gocept/nagiosplugin/
  (#11561).


1.0.0a2 (2012-10-26)
--------------------

- API docs for the most important classes (#7939).
- Added two tutorials (#9425).
- Fix packaging issues.


1.0.0a1 (2012-10-25)
--------------------

- Completely reworked API. The new API is not compatible with the old 0.4 API so
  you must update your plugins.
- Python 3 support.
- The `Cookie` class is now basically a persistent dict and accepts key/value
  pairs. Cookie are stored as JSON files by default so they can be inspected by
  the system administrator (#9400).
- New `LogTail` class which provides convenient access to constantly growing log